projetk8s/identity-api.yml
#service
apiVersion: v1
kind: Service
metadata:
  name: identity-service
  namespace: projet-cloud
spec:
  selector:
    app: identity-pod
  ports:
    - port: 8084
      targetPort: 80
  type: ClusterIP
---
#deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identity-deployment
  namespace: projet-cloud
  labels:
    app: identity-api
spec:
  selector:
    matchLabels:
      app: identity-api-pod
  template:
    metadata:
      labels:
        app: identity-api-pod
    spec:
      containers:
      - name: identity-api
        image: fofanad97/projet-identity-api:v1
        ports:
          - containerPort: 80
        resources:
          requests:
            memory: 500Mi
            cpu: 0.5m
          limits:
            memory: 1500Mi
            cpu: 1m
      restartPolicy: Always
