projetk8s/jobs-api.yml
#service
apiVersion: v1
kind: Service
metadata:
  name: jobs-api-service
  namespace: projet-cloud
spec:
  selector:
    app: jobs-pod
  ports:
    - port: 8083
      targetPort: 80
  type: ClusterIP
---
#deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jobs-deployment
  namespace: projet-cloud
  labels:
    app: jobs-api
spec:
  selector:
    matchLabels:
      app: jobs-api-pod
  template:
    metadata:
      labels:
        app: jobs-api-pod
    spec:
      containers:
      - name: jobs-api
        image: fofanad97/projet-jobs-api:v1
        ports:
          - containerPort: 80
        resources:
          requests:
            memory: 500Mi
            cpu: 0.5m
          limits:
            memory: 1500Mi
            cpu: 1m
      restartPolicy: Always
