projetk8s/rabbitmq.yml
#service
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-service
  namespace: projet-cloud
spec:
  selector:
    app: rabbitmq-pod
  ports:
    - port: 15672
      targetPort: 15672
    - port: 5672
      targetPort: 5672
  type: ClusterIP
---
#deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-deployment
  namespace: projet-cloud
  labels:
    app: rabbitmq
spec:
  selector:
    matchLabels:
      app: rabbitmq-pod
  template:
    metadata:
      labels:
        app: rabbitmq-pod
    spec:
      containers:
      - name: rabbitmq
        image: rabbitmq:3-management
        ports:
          - containerPort: 15672
          - containerPort: 5672
        resources:
          requests:
            memory: 500Mi
            cpu: 4m
          limits:
            memory: 1500Mi
            cpu: 8m
      restartPolicy: Always
