projetk8s/redis.yml
#service
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: projet-cloud
spec:
  selector:
    app: redis-pod
  ports:
    - port: 6379
      targetPort: 6379
  type: ClusterIP
---
#deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
  namespace: projet-cloud
  labels:
    app: redis
spec:
  selector:
    matchLabels:
      app: redis-pod
  template:
    metadata:
      labels:
        app: redis-pod
    spec:
      containers:
      - name: redis
        image: redis
        ports:
          - containerPort: 6379
        resources:
          requests:
            memory: 500Mi
            cpu: 4m
          limits:
            memory: 1500Mi
            cpu: 8m
      restartPolicy: Always
