projetk8s/webmvc.yml
#service
apiVersion: v1
kind: Service
metadata:
  name: webmvc-service
  namespace: projet-cloud
spec:
  selector:
    app: webmvc-pod
  ports:
    - port: 8080
      targetPort: 80
  type: ClusterIP
---
#deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webmvc-deployment
  namespace: projet-cloud
  labels:
    app: webmvc
spec:
  selector:
    matchLabels:
      app: webmvc-pod
  template:
    metadata:
      labels:
        app: webmvc-pod
    spec:
      containers:
      - name: webmvc
        image: fofanad97/projet-web:v1
        ports:
          - containerPort: 80
        resources:
          requests:
            memory: 500Mi
            cpu: 3m
          limits:
            memory: 1500Mi
            cpu: 6m
      restartPolicy: Always
